Fixed spacing and margin issues

--- a/nft_preview_card_component/css/style.css
+++ b/nft_preview_card_component/css/style.css
@@ -25,7 +25,9 @@ div,
 span {
     box-sizing: border-box;
 }
-
+div{
+    box-sizing: border-box;
+}
 #wrapper {
     background-color: hsl(var(--wrapper-color));
     position: relative;
@@ -40,18 +42,22 @@ span {
 .row {
     position: relative;
     width: 100%;
-    margin: 0 auto;
+    margin: 25px auto;
     max-width: 1280px;
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-around;
     flex-wrap: wrap;
+    row-gap: 25px;
 }
 
 .card {
-    background-color: hsl(var(--card-color));
+    position: relative;
     display: flex;
-    flex-shrink: 3;
+    flex-direction: row;
+    align-content: center;
+    justify-content: center;
+    background-color: hsl(var(--card-color));
     width:  100%;
     max-width: 325px;
     border-radius: 20px;
@@ -59,13 +65,16 @@ span {
 }
 
 .card-inner-wrapper {
-    gap: 17px;
-    height: 100%;
-    height: 90%;
+    row-gap: 17px;
+    margin:  0 auto;
+    max-width: 100%;
+    max-height: 100%;
+    padding: 25px;
 }
 
 .card-hero {
-    background: no-repeat center/100% url("../images/image-equilibrium.jpg");
+    background: no-repeat center url("../images/image-equilibrium.jpg");
+    background-size: cover;
     height: 100%;
     width: 100%;
     max-height: 325px;
@@ -76,7 +85,7 @@ span {
 }
 
 .card-detail {
-    gap: 20px;
+    row-gap: 20px;
 }
 
 .card-currency,
@@ -103,7 +112,6 @@ span {
     column-gap: 20px;
     align-items: center;
     border-top: 1px solid hsl(var(--rule-color));
-    padding-top: 18px;
 }
 
 .flex-col {
@@ -196,7 +204,7 @@ a.text-link:hover {
 }
 
 .card-hero:hover {
-    background-size: 110%;
+    background-size: 130%;
     -webkit-transition: all .25s ease-in-out;
     transition: all .25s ease-in-out;
 }
@@ -226,9 +234,6 @@ a.text-link:hover {
 
 @media only screen and (max-width:  825px) {
 
-    .row {
-        justify-content: center;
-    }
     .card{
         justify-self: center;
         /* margin: 15px auto; */
